# ipq

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: release.yml
ipq/: __init__.py  __main__.py  cli.py  errors.py  models.py  utils.py
scripts/: post-release.sh  pre-release.sh
